@@ -6,6 +6,9 @@ HISTORY
  
   ++ New features:
 
+  2016-12-14: Jan Breuer:
+  opt.h, ndc.h/.c: add support for RDNSS option (as per RFC 6106)
+
   2016-12-14: David van Moolenbroek
   * opt.h, nd6.c: Added LWIP_HOOK_ND6_GET_GW()
 
